# LAMB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TRANSFER.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
docs/: conf.py  index.rst
examples/: advanced_rule_examples.py  basic_sugarscape.py  boids_example.py  composition_architecture_example.py  information_access_example.py  market_trading_example.py  multi_model_generalizability_test.py  researcher_prompting_example.py  researcher_sugarscape_example.py  schelling_segregation_example.py  simple_usage_example.py  sir_epidemic_example.py  sugarscape_example.py
lamb/: __init__.py
lamb/api/: __init__.py  research_api.py
lamb/config/: __init__.py  simulation_config.py
lamb/core/: __init__.py  base_agent.py  base_engine.py  base_environment.py  simulation.py  types.py
lamb/engines/: __init__.py  hybrid_engine.py  llm_engine.py  rule_engine.py
lamb/executors/: __init__.py  base_executor.py  grid_executor.py  network_executor.py  physics_executor.py
lamb/factories/: __init__.py  agent_factory.py  engine_factory.py  environment_factory.py  executor_factory.py  simulation_factory.py
lamb/llm/: __init__.py  agent_prompts.py  base_provider.py  batch_processor.py  circuit_breaker.py  openai_provider.py  response_cache.py
lamb/monitoring/: __init__.py  metrics_collector.py  performance_monitor.py
lamb/paradigms/: __init__.py
lamb/paradigms/grid/: __init__.py  grid_agent.py  grid_environment.py  grid_space.py
lamb/paradigms/network/: __init__.py  network_agent.py  network_environment.py  topology.py
lamb/paradigms/physics/: __init__.py  forces.py  physics_agent.py  physics_environment.py
lamb/spatial/: __init__.py  base_spatial.py  graph_index.py  grid_index.py  kdtree_index.py
notebooks/: 01_introduction.py
tests/: test_basic_functionality.py
