[metadata]
name = lamb-abm
version = 0.1.0
author = Jianing Shi
author_email = jianing.shi@fudan.edu.cn
description = A unified framework for building agent-based models with Large Language Model integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/lamb
project_urls =
    Bug Tracker = https://github.com/your-org/lamb/issues
    Documentation = https://lamb.readthedocs.io
    Source Code = https://github.com/your-org/lamb
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
keywords = agent-based modeling, large language models, simulation, complex systems, computational social science
license = MIT
license_file = LICENSE

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    networkx>=2.6.0
    scikit-learn>=1.0.0
    tqdm>=4.62.0
    pydantic>=1.8.0
    typing-extensions>=4.0.0

[options.packages.find]
where = .
include = lamb*
exclude = 
    tests*
    docs*
    examples*
    notebooks*
    benchmarks*

[options.package_data]
lamb = py.typed, *.pyi

[options.extras_require]
llm =
    openai>=1.0.0
    anthropic>=0.3.0
    tiktoken>=0.4.0
visualization =
    plotly>=5.0.0
    seaborn>=0.11.0
    bokeh>=2.4.0
    ipywidgets>=7.6.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=5.0.0
    mypy>=1.0.0
    pre-commit>=2.17.0
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    nbsphinx>=0.8.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    nbsphinx>=0.8.0
    myst-parser>=0.18.0
    sphinx-autodoc-typehints>=1.19.0
all =
    lamb-abm[llm,visualization,dev,docs]

[options.entry_points]
console_scripts =
    lamb = lamb.cli:main

[options.scripts]
lamb = lamb.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .tox,
    .coverage,
    .pytest_cache,
    .mypy_cache,
    docs/_build,
    .sphinx

[coverage:run]
source = lamb
omit = 
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */env/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --strict-config
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    performance: marks tests as performance tests
    llm: marks tests that require LLM API access

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True

[[mypy.overrides]]
module = [
    "openai.*",
    "anthropic.*",
    "plotly.*",
    "seaborn.*",
    "bokeh.*",
]
ignore_missing_imports = True
